refinamentos no front - quase finalizado

--- a/frontend/src/app/routes/test/continuation/test-continuation.component.html
+++ b/frontend/src/app/routes/test/continuation/test-continuation.component.html
@@ -5,14 +5,14 @@
                 <img src="./../../../../assets/images/logos/logo-isla.png">
             </div>
             <div class="screen-info">
-                <h1>Continuar jogo</h1>
-                <h2>Informe o seu código de usuário para continuar o teste!</h2>
+                <p class="title">Continuar jogo</p>
+                <p class="subtitle">Informe o seu código de usuário para continuar o teste!</p>
             </div>
             
             <div class="card animate__animated animate__fadeInUp">
                 <div class="card-text">
-                    <h3>Seu código</h3>
-                    <h4>de 3 caracteres</h4>
+                    <p class="text">Seu código</p>
+                    <p class="info-text">de 3 caracteres</p>
                 </div>
                 
                 <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
