--- a/frontend/src/app/routes/test/info-alert/info-alert.component.html
+++ b/frontend/src/app/routes/test/info-alert/info-alert.component.html
@@ -1,13 +1,13 @@
 <div class="modal-card">
     <div class="modal-container">
         <img src="../../../../assets/images/personagens/tommy-card.png">
-        <h3 class="finish">Atenção!</h3>
-        <h2>
+        <p class="title">Atenção!</p>
+        <p class="text">
             Tem certeza que deseja sair antes de concluir a fase?
-        </h2>
-        <h4>
+        </p>
+        <p class="info-text">
             O progresso só será salvo ao final de cada fase.
-        </h4>
+        </p>
         <button mat-dialog-close id="modal-main-button" (click)="continue()">
             Continuar
         </button>
