--- a/frontend/src/app/routes/test/info-code/info-code.component.html
+++ b/frontend/src/app/routes/test/info-code/info-code.component.html
@@ -1,15 +1,15 @@
 <div class="modal-card">
     <div class="modal-container">
         <img src="../../../../assets/images/personagens/saly.png">
-        <h3>
+        <p class="text">
             Aqui está o seu código exclusivo
-        </h3>
-        <h1>
+        </p>
+        <p class="title">
             {{this.code}}
-        </h1>
-        <h4>
+        </p>
+        <p class="info-text">
             Ele permite você retomar o jogo de onde parou e recuperar seus resultados.
-        </h4>
+        </p>
         <div>
             <button mat-dialog-close id="modal-main-button" style="cursor: pointer;" (click)="goToTest()">
                 Entendido!
