--- a/frontend/src/app/routes/test/info-completed/info-completed.component.html
+++ b/frontend/src/app/routes/test/info-completed/info-completed.component.html
@@ -1,11 +1,11 @@
 <div class="modal-card">
     <div class="modal-container">
         <img src="../../../../assets/images/personagens/gary-computer.png">
-        <h1>Parabéns, você finalizou o jogo!</h1>
-        <h3>
-            Agora você pode ver seu resultado! Ele vai dizer
+        <p class="title">Parabéns, você finalizou o jogo!</p>
+        <p class="text">
+            Seu resultado está pronto! Ele vai dizer em
             quais áreas você pode ter mais aptidão.
-        </h3>
+        </p>
         <button mat-dialog-close id="modal-main-button" (click)="goToResult()">
             Ver meu resultado
         </button>
