--- a/frontend/src/app/routes/test/info/test-info.component.html
+++ b/frontend/src/app/routes/test/info/test-info.component.html
@@ -1,15 +1,15 @@
 <div class="modal-card">
     <div class="modal-container">
         <img src="../../../../assets/images/personagens/saly-explorer.png">
-        <h1>
+        <p class="title">
             Bem-vindo {{ this.username }}
-        </h1>
-        <h4>
+        </p>
+        <p class="info-text">
             Você é um grande explorador!
-        </h4>
-        <h2>
-            Certo dia, você sai para navegar e descobre o UniVerse, um arquipélago com seis ilhas, cada uma simbolizando uma área única de vocação. Prepare-se, a jornada para o autodescobrimento está prestes a começar.
-        </h2>
+        </p>
+        <p class="text">
+            Em um lindo dia, você sai para navegar em mares desconhecidos e descobre o UniVerse, um arquipélago formado por seis ilhas totalmente diferentes. Prepare-se, uma jornada de autodescobrimento está prestes a começar.
+        </p>
         <div>
             <button mat-dialog-close id="modal-main-button">
                     Vamos lá!
