--- a/frontend/src/app/routes/test/personality/personality.component.scss
+++ b/frontend/src/app/routes/test/personality/personality.component.scss
@@ -2,18 +2,18 @@
   margin: 24px 0;
 }
 
-h2 {
+.subtitle {
   margin: 0 0 16px 24px !important;
   opacity: 0.7;
 }
 
-h4 {
+.info-text {
   margin: 16px 2px 4px 0;
 }
 
-h4 span {
-  background-color: #161D39;   
-  padding: 2px 6px;   
+.info-text span {
+  background-color: #1E314F;   
+  padding: 4px 8px;   
   border-radius: 16px;            
 }
 
