--- a/frontend/src/app/routes/test/statement/statement.component.scss
+++ b/frontend/src/app/routes/test/statement/statement.component.scss
@@ -13,20 +13,16 @@
     align-items: center;
 }
 
-h2 {
-    margin: 16px 8px !important;
-    margin-top: 32px;
-    margin-bottom: 24px;
+.subtitle {
+    margin: 16px 8px 4px 8px !important;
     opacity: 0.7;
-
 }
 
-h3 {
+.text {
     margin: 0 8px !important;
 }
   
-
-h4 {
+.info-text {
     margin: 16px 2px 4px 0;
 }
 
@@ -98,64 +94,4 @@ h4 {
     border-radius: 24px;
     width: 0;
     transition: width 0.5s ease-in-out;
-}
-
-body.Realista {
-    background-color: #201621 !important;
-}
-.container-edge.Realista {
-    background-color: #302132 !important;
-}
-.card.Realista {
-    background-color: #513754 !important;
-}
-
-body.Investigativo {
-    background-color: #0C1020 !important;
-}
-.container-edge.Investigativo {
-    background-color: #161D39 !important;
-}
-.card.Investigativo {
-    background-color: #252C4A !important;
-}
-
-body.Artístico {
-    background-color: #272724 !important;
-}
-.container-edge.Artístico {
-    background-color: #363633 !important;
-}
-.card.Artístico {
-    background-color: #51514C !important;
-}
-
-body.Social {
-    background-color: #132728 !important;
-}
-.container-edge.Social {
-    background-color: #214143 !important;
-}
-.card.Social {
-    background-color: #2D6161 !important;
-}
-
-body.Empreendedor {
-    background-color: #1B1930 !important;
-}
-.container-edge.Empreendedor {
-    background-color: #2B274D !important;
-}
-.card.Empreendedor {
-    background-color: #3D376E !important;
-}
-
-body.Convencional {
-    background-color: #261F1F !important;
-}
-.container-edge.Convencional {
-    background-color: #3A3030 !important;
-}
-.card.Convencional {
-    background-color: #514343 !important;
 }
