--- a/frontend/src/app/routes/test/no-result/no-result.component.html
+++ b/frontend/src/app/routes/test/no-result/no-result.component.html
@@ -14,9 +14,9 @@
         </div>
         <div class="container">
             <div class="card"> 
-                <h1>OOPS :(</h1>
-                <h2>Não encontramos seu resultado</h2>
-                <h3>O jogo pode não ter sido finalizado!</h3>
+                <p class="title">OOPS :(</p>
+                <p class="subtitle">Não encontramos seu resultado</p>
+                <p class="text">O jogo pode não ter sido finalizado!</p>
                 <img class="exploring-planet-top" src="./../../assets/images/items/exploring-planet-top.png">
             </div>
             <img class="exploring-planet-bottom" src="./../../assets/images/items/exploring-planet-bottom.png">
