sugestão de cursos - etapa 1

--- a/frontend/src/app/routes/test/result/result.component.html
+++ b/frontend/src/app/routes/test/result/result.component.html
@@ -36,7 +36,7 @@
         </div>
         <div class="buttons">
           <a class="button-link">
-            <button id="create-game-button" mat-raised-button color="primary">
+            <button id="create-game-button" mat-raised-button color="primary" (click)="goToCourses()">
               Quais cursos combinam comigo?
             </button>
         </a>        
