--- a/frontend/src/app/routes/test/statement/statement.component.scss
+++ b/frontend/src/app/routes/test/statement/statement.component.scss
@@ -62,11 +62,12 @@
 .example-button-container p {
     color: #FFF;
     font-family: Fredoka;
-    font-size: 16px;
+    font-size: 18px;
+    letter-spacing: 0px;
     font-style: normal;
     font-weight: 400;
-    line-height: 16px;
-    padding: 16px 16px 8px 16px;
+    line-height: 24px;
+    padding: 12px 12px 4px 12px;
 }
 
 .phase-name {
