--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -302,6 +302,8 @@ body {
   border-radius: 0;
   margin: 0 !important;
   max-width: 500px;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 .modal-container {
